// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation renders a formatted cell for a CAS1 accommodation 1`] = `
"Approved Premises (CAS1)
      <br />
      <span class="govuk-hint">Until 3 February 2026</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation renders a formatted cell for a CAS2 accommodation 1`] = `
"CAS2 for HDC
      <br />
      <span class="govuk-hint">Until 12 March 2026</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation renders a formatted cell for a CAS2v2 accommodation 1`] = `
"CAS2 Bail
      <br />
      <span class="govuk-hint">Until 23 May 2026</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation renders a formatted cell for a CAS3 accommodation 1`] = `
"CAS3
      <br />
      <span class="govuk-hint">Until 31 July 2026</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation renders a formatted cell for a No fixed abode accommodation 1`] = `
"No accommodation
      <br />
      <span class="govuk-hint">Until 10 September 2026</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation renders a formatted cell for a Prison (no qualifier) accommodation 1`] = `
"HMP Foobar
      <br />
      <span class="govuk-hint">Until 11 December 2025</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation renders a formatted cell for a Prison accommodation 1`] = `
"HMP Foobar
      <br />
      <span class="govuk-hint">Until 1 January 2026</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation renders a formatted cell for a Settled Private address accommodation 1`] = `
"Friends or family (not tenant or owner)
      <br />
      <span class="govuk-hint">9 Foo Bar</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation renders a formatted cell for a Transient Private address accommodation 1`] = `
"Other: Some place
      <br />
      <span class="govuk-hint">9 Foo Bar</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation renders a formatted cell for a Undefined accommodation 1`] = `""`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation returns a context card object for a CAS1 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "arrangementType": "CAS1",
  "cardType": "current",
  "endDate": "2026-02-03",
  "name": "Approved Premises (CAS1)",
  "settledTag": undefined,
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation returns a context card object for a CAS2 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "arrangementType": "CAS2",
  "cardType": "current",
  "endDate": "2026-03-12",
  "name": "CAS2 for HDC",
  "settledTag": undefined,
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation returns a context card object for a CAS2v2 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "arrangementType": "CAS2V2",
  "cardType": "current",
  "endDate": "2026-05-23",
  "name": "CAS2 Bail",
  "settledTag": undefined,
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation returns a context card object for a CAS3 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "arrangementType": "CAS3",
  "cardType": "current",
  "endDate": "2026-07-31",
  "name": "CAS3",
  "settledTag": undefined,
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation returns a context card object for a No fixed abode accommodation 1`] = `
{
  "arrangementType": "NO_FIXED_ABODE",
  "cardType": "current",
  "endDate": "2026-09-10",
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation returns a context card object for a Prison (no qualifier) accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "arrangementType": "PRISON",
  "cardType": "current",
  "endDate": "2025-12-11",
  "name": "HMP Foobar",
  "settledTag": undefined,
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation returns a context card object for a Prison accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "arrangementType": "PRISON",
  "cardType": "current",
  "endDate": "2026-01-01",
  "name": "HMP Foobar",
  "settledTag": undefined,
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation returns a context card object for a Settled Private address accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "arrangementType": "PRIVATE",
  "cardType": "current",
  "endDate": "2026-09-10",
  "name": "Friends or family (not tenant or owner)",
  "settledTag": {
    "colour": "green",
    "text": "Settled",
  },
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation returns a context card object for a Transient Private address accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "arrangementType": "PRIVATE",
  "cardType": "current",
  "endDate": "2026-09-10",
  "name": "Other: Some place",
  "settledTag": {
    "colour": "purple",
    "text": "Transient",
  },
  "startDate": "2025-12-01",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for current accommodation returns a context card object for a Undefined accommodation 1`] = `undefined`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation renders a formatted cell for a CAS1 accommodation 1`] = `
"Approved Premises (CAS1)
      <br />
      <span class="govuk-hint">From 3 February 2026</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation renders a formatted cell for a CAS2 accommodation 1`] = `
"CAS2 for HDC
      <br />
      <span class="govuk-hint">From 12 March 2026</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation renders a formatted cell for a CAS2v2 accommodation 1`] = `
"CAS2 Bail
      <br />
      <span class="govuk-hint">From 23 May 2026</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation renders a formatted cell for a CAS3 accommodation 1`] = `
"CAS3
      <br />
      <span class="govuk-hint">From 31 July 2026</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation renders a formatted cell for a No fixed abode accommodation 1`] = `
"None
      <br />
      <span class="govuk-hint">From 10 September 2026</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation renders a formatted cell for a Prison (no qualifier) accommodation 1`] = `
"HMP Foobar
      <br />
      <span class="govuk-hint">From 11 December 2025</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation renders a formatted cell for a Prison accommodation 1`] = `
"HMP Foobar
      <br />
      <span class="govuk-hint">From 1 January 2026</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation renders a formatted cell for a Settled Private address accommodation 1`] = `
"Friends or family (not tenant or owner)
      <br />
      <span class="govuk-hint">9 Foo Bar</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation renders a formatted cell for a Transient Private address accommodation 1`] = `
"Other: Some place
      <br />
      <span class="govuk-hint">9 Foo Bar</span>
    "
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation renders a formatted cell for a Undefined accommodation 1`] = `""`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation returns a context card object for a CAS1 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "arrangementType": "CAS1",
  "cardType": "next",
  "endDate": undefined,
  "name": "Approved Premises (CAS1)",
  "settledTag": undefined,
  "startDate": "2026-02-03",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation returns a context card object for a CAS2 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "arrangementType": "CAS2",
  "cardType": "next",
  "endDate": undefined,
  "name": "CAS2 for HDC",
  "settledTag": undefined,
  "startDate": "2026-03-12",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation returns a context card object for a CAS2v2 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "arrangementType": "CAS2V2",
  "cardType": "next",
  "endDate": undefined,
  "name": "CAS2 Bail",
  "settledTag": undefined,
  "startDate": "2026-05-23",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation returns a context card object for a CAS3 accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "arrangementType": "CAS3",
  "cardType": "next",
  "endDate": undefined,
  "name": "CAS3",
  "settledTag": undefined,
  "startDate": "2026-07-31",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation returns a context card object for a No fixed abode accommodation 1`] = `
{
  "arrangementType": "NO_FIXED_ABODE",
  "cardType": "next",
  "endDate": undefined,
  "startDate": "2026-09-10",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation returns a context card object for a Prison (no qualifier) accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "arrangementType": "PRISON",
  "cardType": "next",
  "endDate": undefined,
  "name": "HMP Foobar",
  "settledTag": undefined,
  "startDate": "2025-12-11",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation returns a context card object for a Prison accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "arrangementType": "PRISON",
  "cardType": "next",
  "endDate": undefined,
  "name": "HMP Foobar",
  "settledTag": undefined,
  "startDate": "2026-01-01",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation returns a context card object for a Settled Private address accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "arrangementType": "PRIVATE",
  "cardType": "next",
  "endDate": undefined,
  "name": "Friends or family (not tenant or owner)",
  "settledTag": {
    "colour": "green",
    "text": "Settled",
  },
  "startDate": "2026-09-10",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation returns a context card object for a Transient Private address accommodation 1`] = `
{
  "address": "9 Foo Bar<br />Foocity<br />FO0 1BA",
  "arrangementType": "PRIVATE",
  "cardType": "next",
  "endDate": undefined,
  "name": "Other: Some place",
  "settledTag": {
    "colour": "purple",
    "text": "Transient",
  },
  "startDate": "2026-09-10",
}
`;

exports[`cases utilities accommodationCell and accommodationCard macros for next accommodation returns a context card object for a Undefined accommodation 1`] = `undefined`;

exports[`cases utilities personCell macro renders a formatted cell for a given person 1`] = `
"<div class="sas-person-cell">
    <div class="govuk-!-margin-bottom-2">
      <a
        class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold"
        href="/cases/C321654"
        >Dave Foo</a
      >
    </div>

    <dl class="sas-risk-tags govuk-!-margin-0 govuk-!-margin-bottom-1">
      <div class="sas-risk-tag sas-risk-tag--very-high">
    <dt>RoSH</dt>
    <dd>Very high</dd>
  </div>
      <div class="sas-risk-tag sas-risk-tag--tier">
        <dt>Tier</dt>
        <dd>B2</dd>
      </div>
    </dl>

    <dl class="sas-person-details govuk-!-margin-0">
      <div>
        <dt>Date of birth</dt>
        <dd>9 October 1980 (45)</dd>
      </div>
      <div>
        <dt>CRN</dt>
        <dd>C321654</dd>
      </div>
      <div>
        <dt>Prison number</dt>
        <dd>A1234BC</dd>
      </div>
    </dl>
  </div>"
`;
